remived unused variables
